--- a/.github/ISSUE_TEMPLATE/01-sdk-bug.yml
+++ b/.github/ISSUE_TEMPLATE/01-sdk-bug.yml
@@ -7,6 +7,7 @@ body:
       value: |
         **Thank you for taking the time to fill out this bug report!**
         💥Before submitting a new request, please search existing issues to see if an issue already exists.
+        💥You may also check whether you can reproduce this issue using the latest released version of [Microsoft.Graph](https://www.powershellgallery.com/packages/Microsoft.Graph) or [Microsoft.Graph.Beta](https://www.powershellgallery.com/packages/Microsoft.Graph.Beta).
   - type: textarea
     id: description
     attributes:
@@ -32,14 +33,19 @@ body:
       description: |
         Please include minimal steps to reproduce the problem if possible. E.g.: the smallest possible code snippet; or steps to run project in link above. If possible include text as text rather than screenshots (so it shows up in searches).
         If there's a link to a public repo where the sample code exists, include it too.
-      placeholder: Minimal Reproduction steps
+      placeholder: |
+        1. Execute `-Mg-` with `...`
+        2. See error at `...`
     validations:
       required: true
   - type: input
     attributes:
       label: SDK Version
       placeholder: e.g. 5.32.1
-      description: Version of the SDK with the bug described above.
+      description: |
+        Version of the SDK with the bug described above.
+          * Please run `Get-Module Microsoft.Graph*` after cmdlet execution and paste the output here.
+          * If a module cannot be installed or imported, please run `Get-Module -ListAvailable` and paste the output.
     validations:
       required: false
   - type: input
@@ -64,7 +70,9 @@ body:
     id: logs
     attributes:
       label: Debug output
-      description: Please copy and paste the output when using the `--debug` flag. This will be automatically formatted into code, so no need for backticks.
+      description: |
+       Please copy and paste the output when using the `--debug` flag. This will be automatically formatted into code, so no need for backticks.
+       Be sure to remove any sensitive information that may be in the logs.
       value: |
         <details><summary>Click to expand log</summary>
         ```
@@ -81,6 +89,8 @@ body:
       label: Configuration
       description: |
         Please provide more information on your SDK configuration:
+          * Please run `$PSVersionTable` and paste the output below.
+          * If running the Docker container image, indicate the tag of the image used and the version of Docker engine.
           * What OS and version, and what distro if applicable (Windows 10, Windows 11, MacOS Catalina, Ubuntu 22.04)?
           * What is the architecture (x64, x86, ARM, ARM64)?
           * Do you know whether it is specific to that configuration?
