--- a/.github/ISSUE_TEMPLATE/01-sdk-bug.yml
+++ b/.github/ISSUE_TEMPLATE/01-sdk-bug.yml
@@ -71,7 +71,7 @@ body:
     attributes:
       label: Debug output
       description: |
-       Please copy and paste the output when using the `--debug` flag. This will be automatically formatted into code, so no need for backticks.
+       Please copy and paste the output when using the `-Debug` flag. This will be automatically formatted into code, so no need for backticks.
        Be sure to remove any sensitive information that may be in the logs.
       value: |
         <details><summary>Click to expand log</summary>
