--- a/openApiDocs/beta/DeviceManagement.Functions.yml
+++ b/openApiDocs/beta/DeviceManagement.Functions.yml
@@ -3603,11 +3603,6 @@ components:
               description: 'Indicates the last DateTime that the request was modified. The value cannot be modified and is automatically populated whenever values in the request are updated. For example, when the ''status'' property changes from needsApproval to approved. The Timestamp type represents date and time information using ISO 8601 format and is always in UTC time. For example, midnight UTC on Jan 1, 2014 would look like this: ''2014-01-01T00:00:00Z''. Returned by default. Read-only. This property is read-only.'
               format: date-time
               readOnly: true
-            operationApprovalPolicies:
-              type: string
-              description: The operational approval policies used in the request. Indicates the policy and platform combinations that are required for this request to be approved or rejected. Read-only. This property is read-only.
-              nullable: true
-              readOnly: true
             requestDateTime:
               pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
               type: string
@@ -4344,25 +4339,25 @@ components:
         modelAsString: false
         values:
           - value: none
-            description: Default. No platform type specified.
+            description: Indicates the settings contained in this configuration don't have a platform set.
             name: none
           - value: android
-            description: Settings for Android platform.
+            description: 'Indicates that the settings contained in associated configuration applies to the Android operating system. '
             name: android
           - value: iOS
-            description: Settings for iOS platform.
+            description: Indicates that the settings contained in associated configuration applies to the iOS operating system.
             name: iOS
           - value: macOS
-            description: Settings for MacOS platform.
+            description: Indicates that the settings contained in associated configuration applies to the MacOS operating system.
             name: macOS
           - value: windows10X
-            description: Windows 10 X.
+            description: Indicates that the settings contained in associated configuration applies to the Windows 10X operating system.
             name: windows10X
           - value: windows10
-            description: Settings for Windows 10 platform.
+            description: Indicates that the settings contained in associated configuration applies to the Windows 10 operating system.
             name: windows10
           - value: linux
-            description: Settings for Linux platform.
+            description: Indicates that the settings contained in associated configuration applies to the Linux operating system.
             name: linux
           - value: unknownFutureValue
             description: Evolvable enumeration sentinel value. Do not use.
@@ -5540,26 +5535,26 @@ components:
               nullable: true
             categoryId:
               type: string
-              description: Specifies the area group under which the setting is configured in a specified configuration service provider (CSP)
+              description: Specify category in which the setting is under. Support $filters.
               nullable: true
             description:
               type: string
-              description: Description of the item
+              description: Description of the setting.
               nullable: true
             displayName:
               type: string
-              description: Display name of the item
+              description: 'Name of the setting. For example: Allow Toast.'
               nullable: true
             helpText:
               type: string
-              description: Help text of the item
+              description: Help text of the setting. Give more details of the setting.
               nullable: true
             infoUrls:
               type: array
               items:
                 type: string
                 nullable: true
-              description: List of links more info for the setting can be found at
+              description: List of links more info for the setting can be found at.
             keywords:
               type: array
               items:
@@ -5583,7 +5578,7 @@ components:
               description: List of referred setting information.
             rootDefinitionId:
               type: string
-              description: Root setting definition if the setting is a child setting.
+              description: Root setting definition id if the setting is a child setting.
               nullable: true
             settingUsage:
               $ref: '#/components/schemas/microsoft.graph.deviceManagementConfigurationSettingUsage'
@@ -5612,11 +5607,11 @@ components:
       properties:
         displayName:
           type: string
-          description: The display name of the identity. This property is read-only.
+          description: 'The display name of the identity. The display name might not always be available or up to date. For example, if a user changes their display name the API might show the new value in a future response, but the items associated with the user won''t show up as having changed when using delta.'
           nullable: true
         id:
           type: string
-          description: The identifier of the identity. This property is read-only.
+          description: 'Unique identifier for the identity. When the unique identifier is unavailable, the displayName property is provided for the identity, but the id property isn''t included in the response.'
           nullable: true
       additionalProperties:
         type: object
@@ -5785,7 +5780,7 @@ components:
       properties:
         settingDefinitionId:
           type: string
-          description: Setting definition id that is being referred to a setting. Applicable for reusable setting.
+          description: Setting definition id that is being referred to a setting. Applicable for reusable setting
           nullable: true
       additionalProperties:
         type: object
