Weekly OpenApiDocs Download.

--- a/openApiDocs/beta/Identity.Partner.yml
+++ b/openApiDocs/beta/Identity.Partner.yml
@@ -1665,6 +1665,7 @@ components:
       enum:
         - delegatedAdminAccessAssignmentUpdate
         - unknownFutureValue
+        - delegatedAdminRelationshipUpdate
       type: string
     microsoft.graph.longRunningOperationStatus:
       title: longRunningOperationStatus
