Updated 1ES pool for weekly examples update

--- a/.azure-pipelines/weekly-examples-update.yml
+++ b/.azure-pipelines/weekly-examples-update.yml
@@ -18,9 +18,6 @@ parameters:
   displayName: PipelineTimeout
   type: number
   default: 1200
-- name: BuildAgent
-  displayName: Build Agent
-  default: 1es-windows-ps-compute
 resources:
   repositories:
   - repository: msgraph-sdk-powershell
@@ -35,7 +32,10 @@ resources:
 extends:
   template: v1/1ES.Official.PipelineTemplate.yml@1ESPipelineTemplates
   parameters:
-    pool: $(BuildAgent)
+    pool:
+      name: Azure-Pipelines-1ESPT-ExDShared
+      image: windows-2022
+      os: windows
     sdl:
       credscan:
         suppressionsFile: $(Build.SourcesDirectory)/.azure-pipelines/config/credscan/credscan-suppressions.json
